--- a/_data/course_schedule.yml
+++ b/_data/course_schedule.yml
@@ -27,7 +27,7 @@ lectures:
     topic: Sensor Technologies
     materials:
     - name: Lecture Slides
-      url: /static_files/lectures/04_sensors_slides.pdf
+      url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/lectures/04_sensors_slides.pdf
 - week: 3
   tuesday:
     topic: IoT Systems Architecture
@@ -37,13 +37,13 @@ lectures:
     topic: IoT Systems Architecture
     materials:
     - name: Lecture Slides
-      url: /static_files/lectures/05_iot_slides.pdf
+      url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/lectures/05_iot_slides.pdf
 - week: 5
   tuesday:
     topic: IoT Systems Architecture
     materials:
     - name: Lecture Slides
-      url: /static_files/lectures/05_iot_slides.pdf
+      url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/lectures/05_iot_slides.pdf
 - week: 6
   tuesday:
     topic: TBD
@@ -125,51 +125,51 @@ lecture_sequence:
 - topic: Course Introduction
   materials:
   - name: Overview.pdf
-    url: /static_files/uploads/Overview.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Overview.pdf
 - topic: Introduction of Networks (part 1)
   materials:
   - name: Chapter_1_P1.pdf
-    url: /static_files/uploads/Chapter_1_P1.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_1_P1.pdf
 - topic: Introduction of Networks (part 2)
   materials:
   - name: Chapter_1_P2.pdf
-    url: /static_files/uploads/Chapter_1_P2.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_1_P2.pdf
 - topic: Introduction of Networks (part 3)
   materials:
   - name: Chapter_1_P3.pdf
-    url: /static_files/uploads/Chapter_1_P3.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_1_P3.pdf
 - topic: Application Layer (part 1)
   materials:
   - name: Chapter_2_P1.pdf
-    url: /static_files/uploads/Chapter_2_P1.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_2_P1.pdf
 - topic: Application Layer (part 2)
   materials:
   - name: Chapter_2_P2.pdf
-    url: /static_files/uploads/Chapter_2_P2.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_2_P2.pdf
 - topic: Application Layer (part 3)
   materials:
   - name: Chapter_2_P3.pdf
-    url: /static_files/uploads/Chapter_2_P3.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_2_P3.pdf
 - topic: Application Layer (part 4)
   materials:
   - name: Chapter_2_P4.pdf
-    url: /static_files/uploads/Chapter_2_P4.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_2_P4.pdf
 - topic: Transport Layer (part 1)
   materials:
   - name: Chapter_3_P1.pdf
-    url: /static_files/uploads/Chapter_3_P1.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_3_P1.pdf
 - topic: Transport Layer (part 2)
   materials:
   - name: Chapter_3_P2.pdf
-    url: /static_files/uploads/Chapter_3_P2.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_3_P2.pdf
 - topic: Transport Layer (part 3)
   materials:
   - name: Chapter_3_P3.pdf
-    url: /static_files/uploads/Chapter_3_P3.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_3_P3.pdf
 - topic: Transport Layer (part 4)
   materials:
   - name: Chapter_3_P4.pdf
-    url: /static_files/uploads/Chapter_3_P4.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_3_P4.pdf
 - topic: Mid-Term Exam Review
   materials: []
 - topic: Mid-Term Exam
@@ -177,47 +177,47 @@ lecture_sequence:
 - topic: Transport Layer (part 5)
   materials:
   - name: Chapter_3_P5.pdf
-    url: /static_files/uploads/Chapter_3_P5.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_3_P5.pdf
 - topic: 'Network Layer: Data Plane (part 1)'
   materials:
   - name: Chapter_4_P1.pdf
-    url: /static_files/uploads/Chapter_4_P1.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_4_P1.pdf
 - topic: 'Network Layer: Data Plane (part 2)'
   materials:
   - name: Chapter_4_P2.pdf
-    url: /static_files/uploads/Chapter_4_P2.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_4_P2.pdf
 - topic: 'Network Layer: Data Plane (part 3)'
   materials:
   - name: Chapter_4_P3.pdf
-    url: /static_files/uploads/Chapter_4_P3.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_4_P3.pdf
 - topic: 'Network Layer: Data Plane (part 4)'
   materials:
   - name: Chapter_4_P4.pdf
-    url: /static_files/uploads/Chapter_4_P4.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_4_P4.pdf
 - topic: 'Network Layer: Control Plane (part 1)'
   materials:
   - name: Chapter_5_P1.pdf
-    url: /static_files/uploads/Chapter_5_P1.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_5_P1.pdf
 - topic: 'Network Layer: Control Plane (part 2)'
   materials:
   - name: Chapter_5_P2.pdf
-    url: /static_files/uploads/Chapter_5_P2.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_5_P2.pdf
 - topic: 'Network Layer: Control Plane (part 3)'
   materials:
   - name: Chapter_5_P3.pdf
-    url: /static_files/uploads/Chapter_5_P3.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_5_P3.pdf
 - topic: Link Layer and LANs (part 1)
   materials:
   - name: Chapter_6_P1.pdf
-    url: /static_files/uploads/Chapter_6_P1.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_6_P1.pdf
 - topic: Link Layer and LANs (part 2)
   materials:
   - name: Chapter_6_P2.pdf
-    url: /static_files/uploads/Chapter_6_P2.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_6_P2.pdf
 - topic: Wireless and Mobile Networks
   materials:
   - name: Chapter_7_P1.pdf
-    url: /static_files/uploads/Chapter_7_P1.pdf
+    url: https://xieyaxiongfly.github.io/CSE589_UB_SP26/static_files/uploads/Chapter_7_P1.pdf
 - topic: Final Exam Review
   materials: []
 - topic: TBD
